[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/personagem/humano/pernae.png" type="Texture" id=1]
[ext_resource path="res://assets/personagem/humano/corpo.png" type="Texture" id=2]
[ext_resource path="res://assets/personagem/humano/bracoe.png" type="Texture" id=3]
[ext_resource path="res://assets/personagem/humano/bracod.png" type="Texture" id=4]
[ext_resource path="res://assets/personagem/humano/cabeca.png" type="Texture" id=5]
[ext_resource path="res://assets/personagem/humano/pernad.png" type="Texture" id=6]
[ext_resource path="res://cenas/personagem/Personagem.gd" type="Script" id=7]

[node name="Personagem" type="Node2D"]
script = ExtResource( 7 )

[node name="Corpo" type="Node2D" parent="."]
modulate = Color( 0.94902, 0.784314, 0.698039, 1 )

[node name="SpriteCabeca" type="Sprite" parent="Corpo"]
z_index = 2
texture = ExtResource( 5 )

[node name="SpriteCorpo" type="Sprite" parent="Corpo"]
z_index = 1
texture = ExtResource( 2 )

[node name="SpriteBracoEsq" type="Sprite" parent="Corpo"]
z_index = 2
texture = ExtResource( 3 )

[node name="SpriteBracoDir" type="Sprite" parent="Corpo"]
texture = ExtResource( 4 )

[node name="SpritePernaEsq" type="Sprite" parent="Corpo"]
z_index = 2
texture = ExtResource( 1 )

[node name="SpritePernaDir" type="Sprite" parent="Corpo"]
texture = ExtResource( 6 )

[node name="Armadura" type="Node2D" parent="."]

[node name="SpriteCabeca" type="Sprite" parent="Armadura"]
z_index = 4

[node name="SpriteCalca" type="Sprite" parent="Armadura"]
z_index = 4

[node name="SpritePeito" type="Sprite" parent="Armadura"]
z_index = 5

[node name="SpriteLuvas" type="Sprite" parent="Armadura"]
z_index = 6

[node name="SpriteBotas" type="Sprite" parent="Armadura"]
z_index = 6

[node name="Armas" type="Node2D" parent="."]

[node name="MaoEsquerda" type="Sprite" parent="Armas"]
z_index = 6

[node name="MaoDireita" type="Sprite" parent="Armas"]
position = Vector2( 36.1239, -0.502427 )
scale = Vector2( 0.530416, 1 )
